# BEEP

./: .dir-locals.el  .gitignore  .testconfig  CMakeLists.txt  Contributing.md  Doxyfile  LICENCE  MBP.cc  MBP.hh  MBPCHAIN.cc  MBPCHAIN.hh  MBPPART.cc  MBPPART.hh  Makefile  Makefilenew  PART.cc  PART.hh  PMBP.cc  PMBP.hh  PMCMC.cc  PMCMC.h  PMCMC.hh  README.md  README_visBEEP.txt  README_visBEEPmbp.txt  SoftwareChecklist.md  Weekly case data.txt  _config.yml  abc.cc  abc.hh  abcmbp.cc  abcmbp.hh  abcmbp_gr.cc  abcmbp_gr.hh  abcsmc.cc  abcsmc.hh  analysis.cc  areatree.cc  areatree.hh  cases_scotsim.txt  (+97 more)
.github/workflows/: ci.yml  style.css
COVID 19 England/: England_AS.toml
COVID 19 England/Data_England_AS/: admissions.csv  admissions_AS.csv  age_mixing_matrix.csv  antibody_AS.csv  cases_AS.csv  covid19_inf_survey_AS.csv  deaths_AS.csv
Data_ScotlandMSOA/: Ndata.txt  areadata.txt  cases.txt  deaths.txt  inf.toml  regiondata.txt  sim.toml
Data_example/: Ndata_other.txt  Q_flow_all_data.txt  areadata.txt  cases.txt  deaths.txt  democat.txt  regiondata.txt
Data_small/: regiondata.txt
Data_uk/: areadata.txt  regiondata.txt
_posts/: 2020-07-09-welcome-to-jekyll.markdown
codetests/: test_data.cc  test_pack.cc  test_utils.cc
examples/: COVID_model.toml  EX.toml  EX1.toml  EX1a.toml  EX1b.toml  EX1c.toml  EX1d.toml  EX1e.toml  EX2.toml  EX3a.toml  EX3b.toml  EX3c.toml  EX3d.toml  EX4a.toml  EX4b.toml  EX4c.toml  EX5a.toml  EX5b.toml  EX5c.toml  EX5d.toml  EX6a.toml  EX6b.toml  EX_A1.toml  EX_A2.toml  EX_A3.toml  EX_A4.toml  EX_A5.toml  EX_B1.toml  EX_B2.toml  EX_B3.toml  EX_B4.toml  EX_B5.toml  EX_B6.toml  EX_B7.toml  EX_C1.toml  EX_C2.toml  EX_C3.toml  EX_C4.toml  EX_C5.toml  EX_C6.toml  (+28 more)
examples/Data_EX/: population.csv
examples/Data_EX1/: scotland.csv
examples/Data_EX17/: population.csv
examples/Data_EX1a/: S-I.csv
examples/Data_EX1b/: E-I.csv  I.csv  R.csv
examples/Data_EX1c/: I-D.csv  S-I.csv
examples/Data_EX1d/: E-I.csv  R.csv
examples/Data_EX1e/: E-I.csv  R.csv  init_pop.csv
examples/Data_EX2/: M.csv  Scotland_LA.csv
examples/Data_EX3a/: I-D.csv  S-I.csv
examples/Data_EX3b/: I-D.csv  S-I.csv
examples/Data_EX3c/: I-D.csv  S-I.csv
examples/Data_EX3d/: I-D.csv  S-I.csv  population.csv
examples/Data_EX4a/: I-D.csv  S-I.csv
examples/Data_EX4b/: I-D.csv  S-I.csv  areatvcovar.csv
examples/Data_EX4c/: population.csv
examples/Data_EX5a/: I-R.csv  S-I.csv
examples/Data_EX5b/: I-D.csv  R_spline.csv  S-I.csv  amp.csv
examples/Data_EX5c/: I-R.csv  S-I.csv
examples/Data_EX6a/: R_spline.csv
examples/Data_EX_A1/: I-R.csv
examples/Data_EX_A2/: R.csv
examples/Data_EX_A3/: I-D.csv  S-I.csv
examples/Data_EX_A4/: E-I.csv  R.csv
examples/Data_EX_A5/: I.csv
examples/Data_EX_B1/: E-I.csv  I-R total.csv  I.csv  R.csv
examples/Data_EX_B3/: E-I.csv  I.csv  R.csv  population.csv
examples/Data_EX_B5/: E-I_obs.csv  I.csv
examples/Data_EX_B6/: E-I_obs.csv
examples/Data_EX_B7/: E-I_obs.csv  I.csv  R.csv
examples/Data_EX_C1/: I-D.csv  S-I.csv  geo_mixing_matrix.csv  population.csv
examples/Data_EX_C2/: I-D.csv  S-I.csv  geo_mixing_matrix.csv
examples/Data_EX_C3/: I-D.csv  S-I.csv  population.csv
examples/Data_EX_C4/: I-D.csv  S-I.csv
examples/Data_EX_C5/: I-D.csv  M_Scotland_LA.csv  S-I.csv  Scotland_LA.csv  Scotland_areas.geojson
examples/Data_EX_C6/: I-D.csv  S-I.csv
examples/Data_EX_D1/: I-D.csv  S-I.csv  tvcovar.csv
examples/Data_EX_D2/: I-D.csv  S-I.csv
examples/Data_EX_D3/: I-D.csv  S-I.csv  levels.csv
examples/Data_EX_E1/: R_spline.csv  population.csv
examples/Data_EX_E2/: I-D.csv  S-I.csv  amp.csv  population.csv
examples/Data_EX_E3/: I-R.csv  R_spline.csv  S-I.csv  efoi_spline.csv  population.csv
examples/Data_EX_E4/: I-D.csv  S-I.csv  m_t.csv
examples/Data_EX_F1/: E-I.csv  I.csv  R.csv
examples/Data_EX_F2/: I-R.csv  R_spline.csv  S-I.csv
examples/Data_EX_F4/: E-I.csv  I.csv  R.csv
examples/Data_EX_F5/: E-I.csv
examples/Data_EX_G1/: admissions.csv  antibody.csv  cases.csv  covid19_inf_survey.csv  deaths.csv  population.csv
examples/Data_EX_G2/: R_spline.csv  admissions.csv  admissions_AS.csv  age_mixing_perturb.csv  antibody_AS.csv  cases_AS.csv  covid19_inf_survey_AS.csv  deaths_AS.csv
examples/Data_EX_G3/: R_spline.csv  admissions.csv  admissions_AS.csv  age_mixing_matrix.csv  amp.csv  antibody_AS.csv  cases_AS.csv  covid19_inf_survey_AS.csv  deaths_AS.csv  population.csv
examples/Data_EX_Scotland/: AMM.csv  README.txt.txt  areatvcovar.csv  initpop.csv  tvcovar.csv
examples/Data_England_Simple/: Cases_cut.csv  Deaths.csv  England.csv  R_spline.csv  R_spline_restrict.csv  antibody.csv  efoi_spline.csv
examples/Data_SEIR/: areadata.csv
examples/Data_ScotlandMSOA/: D_NRS_reg.txt  HD_NRS.txt  H_reg.txt  ID_NRS.txt  IH.txt  Ndata_all.txt  Ndata_home.txt  areadata.txt  readme.txt  regiondata.txt
examples/Data_example/: H.txt  HD.txt  HD_age.txt  ID.txt  ID_age.txt  IH.txt  IH_age.txt  IR.txt  IR_age.txt  Mdata.txt  Ndata_school.txt  Ndata_work.txt  Q_local_home_data.txt  areadata.txt  regiondata.txt
examples/Output_EX_A1/: Model_specification.txt  Parameter_estimates.csv  README.md  visBEEPmbp.html
examples/Output_EX_G3b/: Model_specification.txt  README.md
examples/Pipeline_EX/: EX.toml  (+1 more)
src/: CMakeLists.txt  abc.cc  abc.hh  abccont.cc  abccont.hh  abcda.cc  abcda.hh  abcmbp.cc  abcmbp.hh  abcsmc.cc  abcsmc.hh  consts.hh  data.cc  data.hh  data_boundary.cc  data_matrix.cc  data_raw.cc  details.cc  details.hh  gitversion.cc  importance.cc  importance.hh  indbased_code.cc  inputs.cc  inputs.hh  inputs_comps.cc  main.cc  matrix.cc  matrix.hh  mbp.cc  mbp.hh  mbp_check.cc  mc3.cc  mc3.hh  ml.cc  ml.hh  model.cc  model.hh  model_JSON.cc  mpi.cc  (+30 more)
src/ZIP/: ZIP.cpp
vis_files/: button.js  buttonplot.js  canbutton.js  const.js  generate_plots.js  init.js  mouseclick.js  mousemove.js  var.js
(+165 files in other folders)
